--- a/plantillas/partials/nav.html
+++ b/plantillas/partials/nav.html
@@ -32,7 +32,7 @@
                     <li class="nav-item">
                         <form method="POST" action="{% url 'user-logout' %}">
                             {% csrf_token %}
-                            <button type="submit" class="btn btn-link nav-link text-white">Logout</button>
+                            <button type="submit" class="btn btn-link nav-link text-white">Cerrar Sesión</button>
                         </form>
                     </li>
                 </ul>
