Se agrego un sistema de lista desplegable

--- a/plantillas/partials/topnav.html
+++ b/plantillas/partials/topnav.html
@@ -3,21 +3,17 @@
         <div class="row mt-4">
             <div class="col-md-4">
                 <div class="card">
-                    <div class="card-header bg-info text-white">
-                        Información
-                    </div>
+                    <div class="card-header bg-info font-weight-bold text-white">Información</div>
                     <div class="card-body">
                         <marquee behavior="" direction="">
-                            <h3 class="my-4">Bienvenido, aún en prueba</h3>
+                            <h3 class="my-4">Bienvenido, hoy es {{ fecha  }} <span>&#x1F609;</span></h3>
                         </marquee>
                     </div>
                 </div>
             </div>
             <div class="col-md-8">
                 <div class="card">
-                    <div class="card-header bg-info text-white">
-                        Estadísticas
-                    </div>
+                    <div class="card-header bg-info font-weight-bold text-white">Estadísticas</div>
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4">
